# web-server-template

./: .env  .gitignore  Cargo.toml
src/: error.rs  main.rs  model.rs
src/configuration/: env.rs  mod.rs
src/web/: mod.rs  routes_health.rs  routes_static.rs  routes_ticket.rs
tests/: quick_dev.rs
