[package]
name = "barebone_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
color-eyre = "0.6"
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"
axum = "0.8.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[dev-dependencies]
httpc-test = "0.1"
