[package]
name = "barebone_server"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 }

[dependencies]
tokio = { version = "1.48", features = ["full"] }
color-eyre = "0.6"
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"
axum = "0.8.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
derive_more = { version = "2.0", features = ["from"] }


[dev-dependencies]
httpc-test = "0.1"
